[*] Remove location entity
